Switch between windows

--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -1,21 +1,32 @@
+WindowManager:
+    LoginWindow:
+    SignUpWindow:
+
+
 <LoginWindow>:
+    name: "login"
 	username : username
 	pwd : pwd
+
 	FloatLayout:
 		size: root.width, root.height
+
 		Label:
 			text : "USERNAME/EMAIL: "
 			size_hint : 0.2, 0.1
 			pos_hint : {"x":0.25, "top":0.9}
+
 		TextInput:
 			id : username
 			multiline :False
 			size_hint : 0.3, 0.1
 			pos_hint : {"x" : 0.45, "top" : 0.9}
+
 		Label:
 			text : "PASSWORD: "
 			size_hint : 0.2, 0.1
 			pos_hint : {"x" : 0.25, "top" : 0.7}
+
 		TextInput:
 			id : pwd
 			multiline :False
@@ -26,13 +37,58 @@
             text : "LOGIN"
             size_hint : 0.3, 0.1
             pos_hint : {"x" : 0.39, "top" : 0.4}
-            on_release:
-                root.validate()
-                root.manager.transition.direction = "up"
+
 		Button:
 			text : "Create an account"
 			size_hint : 0.4, 0.1
 			pos_hint : {"x" : 0.33, "top" : 0.2}
 			on_release:
-				app.root.current = 'signup'
-				root.manager.transition.direction = "left"
+			    print('dupa')
+				root.manager.current = "signUp"
+
+<SignUpWindow>:
+    name : "signUp"
+    username : username
+    email : email
+    pwd : pwd
+    FloatLayout:
+        Label:
+            text : "NAME: "
+            size_hint : 0.2, 0.1
+            pos_hint : {"x":0.25, "top":0.9}
+
+        TextInput:
+            id : username
+            multiline : False
+            size_hint : 0.3, 0.1
+            pos_hint : {"x" : 0.45, "top" : 0.9}
+
+        Label:
+            text : "EMAIL: "
+            size_hint : 0.2, 0.1
+            pos_hint : {"x" : 0.25, "top" : 0.7}
+
+        TextInput:
+            id : email
+            multiline : False
+            size_hint : 0.3, 0.1
+            pos_hint : {"x" : 0.45, "top" : 0.7}
+
+        Label:
+            text : "PASSWORD: "
+            size_hint : 0.2, 0.1
+            pos_hint : {"x" : 0.25, "top" : 0.5}
+
+        TextInput:
+            id : pwd
+            multiline : False
+            size_hint : 0.3, 0.1
+            pos_hint : {"x" : 0.45, "top" : 0.5}
+
+        Button:
+            text : "SUBMIT"
+            size_hint : 0.3, 0.1
+            pos_hint : {"x" : 0.39, "top" : 0.28}
+            on_press :
+                root.signupbtn()
+                root.manager.transition.direction = "right"
