--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -114,7 +114,7 @@ WindowManager:
             size_hint : 0.3, 0.05
             pos_hint : {"x" : 0.39, "top" : 0.20}
             on_press :
-                root.signupbtn()
+                root.authenticate()
                 root.manager.transition.direction = "right"
 
         Button:
