--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -86,6 +86,7 @@ WindowManager:
             multiline : False
             size_hint : 0.3, 0.1
             pos_hint : {"x" : 0.45, "top" : 0.65}
+            input_filter: 'int'
 
         Label:
             text : "PASSWORD: "
@@ -114,7 +115,7 @@ WindowManager:
             size_hint : 0.3, 0.05
             pos_hint : {"x" : 0.39, "top" : 0.20}
             on_press :
-                root.authenticate()
+                root.validateData()
                 root.manager.transition.direction = "right"
 
         Button:
