Add popup messages

--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -115,7 +115,7 @@ WindowManager:
             size_hint : 0.3, 0.05
             pos_hint : {"x" : 0.39, "top" : 0.20}
             on_press :
-                root.validateData()
+                root.validate_data()
                 root.manager.transition.direction = "right"
 
         Button:
