Check login credentials

--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -37,6 +37,8 @@ WindowManager:
             text : "LOGIN"
             size_hint : 0.3, 0.1
             pos_hint : {"x" : 0.39, "top" : 0.4}
+            on_release:
+                root.login()
 
 		Button:
 			text : "Create an account"
