--- a/loginSystem.kv
+++ b/loginSystem.kv
@@ -33,6 +33,7 @@ WindowManager:
 			multiline :False
 			size_hint : 0.3, 0.1
 			pos_hint : {"x" : 0.45, "top" : 0.7}
+			password: True
 
         Button:
             text : "LOGIN"
@@ -103,6 +104,7 @@ WindowManager:
             multiline : False
             size_hint : 0.3, 0.1
             pos_hint : {"x" : 0.45, "top" : 0.5}
+            password: True
 
         Label:
             text : "REPEAT PASSWORD: "
@@ -114,6 +116,7 @@ WindowManager:
             multiline : False
             size_hint : 0.3, 0.1
             pos_hint : {"x" : 0.45, "top" : 0.35}
+            password: True
 
         Button:
             text : "SUBMIT"
